--- a/CardGame.Web/Views/Shared/_Login.cshtml
+++ b/CardGame.Web/Views/Shared/_Login.cshtml
@@ -4,17 +4,26 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.LabelFor(u => u.Email)
-    @Html.EditorFor(u => u.Email)
-    <br />
-    @Html.LabelFor(u => u.Password)
-    @Html.EditorFor(u => u.Password)
-    <br />
-    <input type="submit" class="btn btn-default" />
+@using (Html.BeginForm("_Login", "Account", FormMethod.Post))
+{   
+    <fieldset id="LoginForm">
+        <h2>Login</h2>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { placeholder = "Benutzername" } })
+          @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { placeholder = "Passwort" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
+        <p id="LoginFormBtn">
+            <button type="submit" class="btn btn-default btn-responsive">Login</button>
+        </p>
+    </fieldset>
+
+
 }
 
-@Html.ActionLink("Create Account","Register")
