--- a/CardGame.Web/Content/MyStyle.css
+++ b/CardGame.Web/Content/MyStyle.css
@@ -1,1 +1,31 @@
-﻿
+﻿@font-face {
+         font-family: 'Xena';
+         src: url('../fonts/Xena.ttf') format('truetype');
+        }
+* {
+         font-family: Xena;
+        } 
+
+body {    
+    background-image: url("Images/Background.jpg");
+    background-repeat: no-repeat;  
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;    
+}
+
+#footer{   
+    text-align:left;
+    width:auto;  
+    position:fixed;
+    bottom:0.1%;   
+    color:white;
+}
+#menueleiste{
+     /*font-size:20px;*/
+     color:grey !important;   
+}
+
+#welcomeMessage{
+
+}
