--- a/CardGame.Web/Views/Account/Login.cshtml
+++ b/CardGame.Web/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@using (Html.BeginForm("_Login", "Account", FormMethod.Post))
+@using (Html.BeginForm("Login", "Account", FormMethod.Post))
 {   
     <fieldset id="LoginForm">
         <h2>Login</h2>
