--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@model CardGame.Web.Models.User
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +10,7 @@
     <link href="~/Content/MyStyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="menueleiste">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,26 +20,25 @@
                 </button>
                 @Html.ActionLink("Clonestone", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse" id="menueleiste">
+            <div class="navbar-collapse collapse" >
                 <ul class="nav navbar-nav navbar-right">
 
-    @if (User.Identity.Name == "" || User.Identity.Name == null)
-    {
-        
-        <li>@Html.ActionLink("Login", "_Login", "Account")</li>
-        <li>@Html.ActionLink("Registrieren", "_Register", "Account")</li>
+                    @if (User.Identity.Name == "" || User.Identity.Name == null)
+                    {
+                        <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                        <li>@Html.ActionLink("Registrieren", "Register", "Account")</li>
+                    }
 
-    }
-
-    else
-    {
-        //TODO Die Action Links vervollständigen
-                        <li>@Html.ActionLink("Shop", "Not implement", "Not implement")</li>
+                    else
+                    {
+                        <li id="welcomeMessage">Willkommen @ViewBag.Firstname @ViewBag.Lastname</li>
+                        //TODO Die Action Links vervollständigen
+                        <li>@Html.ActionLink("Shop", "Shop", "Home")</li>
                         <li>@Html.ActionLink("Deckbuilder", "Not implement", "Not implement")</li>
-                            @*<li>@Html.ActionLink("Statistic", "Statistics", "Home")</li>*@
-                            @*<li>@Html.ActionLink("Cards", "Overview", "Card")</li>*@
-                            @*<li>@Html.ActionLink("Users", "Index", "User")</li>*@
-                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                        @*<li>@Html.ActionLink("Statistic", "Statistics", "Home")</li>*@
+                        @*<li>@Html.ActionLink("Cards", "Overview", "Card")</li>*@
+                        @*<li>@Html.ActionLink("Users", "Index", "User")</li>*@
+                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>                        
                     }
 
                 </ul>
@@ -48,15 +46,20 @@
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        @RenderBody()        
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year powered by MTP Sandholzer</p>
-        </footer>
+        
     </div>
+    <div class="navbar-fixed-bottom center visible-lg visible-md visible-sm" id="footer">
+        <div class="navbar-collapse collapse">
+            <div class="footer-nav">
+                <p>&copy; @DateTime.Now.Year powered by MTP Sandholzer</p>
+                </div>
+            </div>
+        </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+                @Scripts.Render("~/bundles/jquery")
+                @Scripts.Render("~/bundles/bootstrap")
+                @RenderSection("scripts", required: false)
 </body>
 </html>
