--- a/CardGame.Web/Views/Home/Shop.cshtml
+++ b/CardGame.Web/Views/Home/Shop.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Shop";
 }
 
-<h2>Shop</h2>
-
+<p class="CardPacks">
+    <img src="~/Content/Images/Card Pack.png" />
+    <img src="~/Content/Images/Card Pack.png" />
+    <img src="~/Content/Images/Card Pack.png" />
+</p>
