--- a/CardGame.Web/Views/Account/Login.cshtml
+++ b/CardGame.Web/Views/Account/Login.cshtml
@@ -20,11 +20,11 @@
             <p class="valimassage">@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-warning" })</p> 
         </div>
         <br/>
-        <p id="LoginFormBtn">
-            <button type="submit" class="btn btn-default btn-responsive">Login</button>
+        <p>
+            <input type="submit" class="btn btn-submit" value="Login">
         </p>
     </fieldset>
-
+    
 
 }
 
