--- a/CardGame.Web/Views/Account/Register.cshtml
+++ b/CardGame.Web/Views/Account/Register.cshtml
@@ -29,8 +29,8 @@
         <div>@Html.Label("Confirm password")</div>
         <div>@Html.EditorFor(u => u.confirmPassword)</div>
         <br />
-        <p id="RegisterFormBtn">
-            <button type="submit" class="btn btn-default btn-responsive">Register</button>
+        <p>
+            <input type="submit" class="btn btn-submit" value="Register">
         </p>
     </fieldset>
 }
