--- a/CardGame.Web/Views/Account/Register.cshtml
+++ b/CardGame.Web/Views/Account/Register.cshtml
@@ -11,15 +11,15 @@
     <fieldset id="RegisterForm">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div>@Html.LabelFor(u => u.Firstname)</div>
+        <div>@Html.Label("Vorname")</div>
         <div>@Html.EditorFor(u => u.Firstname)</div>
 <p class="valimassage">@Html.ValidationMessageFor(model => model.Firstname, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.LabelFor(u => u.Lastname)</div>
+        <div>@Html.Label("Nachname")</div>
         <div>@Html.EditorFor(u => u.Lastname)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Lastname, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.LabelFor(u => u.Gamertag)</div>
+        <div>@Html.Label("Gamertag")</div>
         <div>@Html.EditorFor(u => u.Gamertag)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Gamertag, "", new { @class = "text-warning" })</p>
         <br />
@@ -27,11 +27,11 @@
         <div>@Html.EditorFor(u => u.Email)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.LabelFor(u => u.Password)</div>
+        <div>@Html.Label("Passwort")</div>
         <div>@Html.EditorFor(u => u.Password)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.Label("Confirm password")</div>
+        <div>@Html.Label("Passwort wiederholen")</div>
         <div>@Html.EditorFor(u => u.confirmPassword)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.confirmPassword, "", new { @class = "text-warning" })</p>
         <br />
