--- a/CardGame.Web/Content/MyStyle.css
+++ b/CardGame.Web/Content/MyStyle.css
@@ -1,10 +1,10 @@
 ﻿@font-face {
-    font-family: 'Xena';
-    src: url('../fonts/Xena.ttf') format('truetype');
+    font-family: 'Mermaid1001';
+    src: url('../fonts/Mermaid1001.ttf') format('truetype');
 }
 
 * {
-    font-family: Xena;
+    font-family: Mermaid1001;
 }
 
 body {
