--- a/CardGame.Web/Views/Home/AGB.cshtml
+++ b/CardGame.Web/Views/Home/AGB.cshtml
@@ -5,22 +5,23 @@
 
 <h2 class="AGBHeader">Allgemeine Geschäftsbedingungen der MTP GmbH</h2>
 
-<div>
-    <h4 >1.1 Allgemeine Bestimmungen</h4>
+<div class="AGBBody">
+    <div>
+        <h4>1.1 Allgemeine Bestimmungen</h4>
+    </div>
+    <p>Die allgemeinen Geschäftsbedingungen der MTP gelten für alle Lieferungen und Dienstleistungen, die MTP  gegenüber dem Auftraggeber erbringt. Sie gelten auch für zukünftige Geschäfte, selbst wenn nicht ausdrücklich darauf Bezug genommen wird. MTP nimmt Auftrage nur unter Anwendung dieser allgemeinen Geschäftsbedingungen an.</p>
+    <div>
+        <h4>1.2 Liefertermine</h4>
+    </div>
+    <p>Werden die vereinbarten Liefertermine um mehr als 30 Tage überschritten, ist der Auftraggeber nach Setzung und Gewährung einer Nachfrist von mindestens 90 Tagen mittels eingeschriebenem Brief berechtigt, vom Vertrag zurückzutreten. Der Auftraggeber verzichtet ausdrücklich gegenüber MTP im Falle des Rücktritts vom Vertrag wegen Nichterfüllung innerhalb der gesetzten Nachfrist auf die Geltendmachung von Verdienstentgang, sowie sonstigen Schaden aller Art.</p>
+    <div>
+        <h4>1.3 Preise und Zahlungsbedingungen</h4>
+    </div>
+    <p>Sämtliche von MTP auf Angeboten, Auftragsbestätigungen oder sonstigen Geschäftsbriefen genannten Preise enthalten so ferne nicht ausdrücklich angegeben keine Umsatzsteuer, diese wird gesondert in Rechnung gestellt. Werden im Zusammenhang mit dem Abschluss und der Durchführung eines Auftrages Abgaben erhoben, trägt diese der Auftraggeber allein. Die Kosten der für die Erbringung der Dienstleistung erforderlichen Fahrtspesen und Reisezeiten seitens MTP tragt der Auftraggeber.</p>
+    <div>
+        <h4>1.4 Gewährleistung</h4>
+    </div>
+    <p>Der Kunde ist verpflichtet, nach Erhalt der vereinbarten Lieferungen und Leistungen diese sofort auf Richtigkeit und Vollständigkeit zu kontrollieren und bei gelieferten Programmen einen Probe- ¨lauf durchzufuhren sowie die erzielten Ergebnisse zu überprüfen. Soweit sich dabei irgendwelche Mängel herausstellen, ist der Auftraggeber verpflichtet, MTP sofort schriftlich hier über unter Anschluss der fehlerhaften Beispiele in Kenntnis zu setzen. MTP wird bemüht sein, den Mangel kurzfristig zu beheben und das korrigierte Programm dem Auftraggeber zur Verfügung zu stellen, oder eine zumutbare Methode zur Umgehung des Mangels zu beschreiben. MTP kann vom Auftraggeber weitere zur Behebung des Mangels notwendige Informationen anfordern, die er kostenlos zur Verfügung zu stellen hat. Eine vom Auftraggeber schriftlich zu setzende Nachfrist für die Fehlerbehebung oder Umgehung beträgt mindestens 60 Tage.</p>
 </div>
-<p>Die allgemeinen Geschäftsbedingungen der MTP gelten für alle Lieferungen und Dienstleistungen, die MTP  gegenüber dem Auftraggeber erbringt. Sie gelten auch für zukünftige Geschäfte, selbst wenn nicht ausdrücklich darauf Bezug genommen wird. MTP nimmt Auftrage nur unter Anwendung dieser allgemeinen Geschäftsbedingungen an.</p>
-<div>
-    <h4>1.2 Liefertermine</h4>
-</div>
-<p>Werden die vereinbarten Liefertermine um mehr als 30 Tage überschritten, ist der Auftraggeber nach Setzung und Gewährung einer Nachfrist von mindestens 90 Tagen mittels eingeschriebenem Brief berechtigt, vom Vertrag zurückzutreten. Der Auftraggeber verzichtet ausdrücklich gegenüber MTP im Falle des Rücktritts vom Vertrag wegen Nichterfüllung innerhalb der gesetzten Nachfrist auf die Geltendmachung von Verdienstentgang, sowie sonstigen Schaden aller Art.</p>
-<div>
-    <h4>1.3 Preise und Zahlungsbedingungen</h4>
-</div>
-<p>Sämtliche von MTP auf Angeboten, Auftragsbestätigungen oder sonstigen Geschäftsbriefen genannten Preise enthalten so ferne nicht ausdrücklich angegeben keine Umsatzsteuer, diese wird gesondert in Rechnung gestellt. Werden im Zusammenhang mit dem Abschluss und der Durchführung eines Auftrages Abgaben erhoben, trägt diese der Auftraggeber allein. Die Kosten der für die Erbringung der Dienstleistung erforderlichen Fahrtspesen und Reisezeiten seitens MTP tragt der Auftraggeber.</p>
-<div>
-    <h4>1.4 Gewährleistung</h4>
-</div>
-<p>Der Kunde ist verpflichtet, nach Erhalt der vereinbarten Lieferungen und Leistungen diese sofort auf Richtigkeit und Vollständigkeit zu kontrollieren und bei gelieferten Programmen einen Probe- ¨lauf durchzufuhren sowie die erzielten Ergebnisse zu überprüfen. Soweit sich dabei irgendwelche Mängel herausstellen, ist der Auftraggeber verpflichtet, MTP sofort schriftlich hier über unter Anschluss der fehlerhaften Beispiele in Kenntnis zu setzen. MTP wird bemüht sein, den Mangel kurzfristig zu beheben und das korrigierte Programm dem Auftraggeber zur Verfügung zu stellen, oder eine zumutbare Methode zur Umgehung des Mangels zu beschreiben. MTP kann vom Auftraggeber weitere zur Behebung des Mangels notwendige Informationen anfordern, die er kostenlos zur Verfügung zu stellen hat. Eine vom Auftraggeber schriftlich zu setzende Nachfrist für die Fehlerbehebung oder Umgehung beträgt mindestens 60 Tage.</p>
-
 
 
