--- a/CardGame.Web/Views/Home/Impressum.cshtml
+++ b/CardGame.Web/Views/Home/Impressum.cshtml
@@ -3,22 +3,27 @@
     ViewBag.Title = "Impressum";
 }
 
-<h2>Impressum</h2>
 
-<table>
-    <tr>
-        <th>Magical Tea Party</th>
-    </tr>
-    <tr>
-        <td>Magic Street 23, 4242 Wonderland</td>
-    </tr>
-    <tr>
-        <td>Tel: +43(1) 23 233 232</td>
-    </tr>
-    <tr>
-        <td>Email: magic@teaparty.com</td>
-    </tr>
-    <tr>
-        <td>CEO: Faul Thomas</td>
-    </tr>
-</table>
+
+<h2 class="ImpressumHeader">Impressum</h2>
+
+
+<div class="ImpressumBody">
+    <table>
+        <tr>
+            <td>Magical Tea Party</td>
+        </tr>
+        <tr>
+            <td>Magic Street 23, 4242 Wonderland</td>
+        </tr>
+        <tr>
+            <td>Tel: +43(1) 23 233 232</td>
+        </tr>
+        <tr>
+            <td>Email: magic@teaparty.com</td>
+        </tr>
+        <tr>
+            <td>CEO: Faul Thomas</td>
+        </tr>
+    </table>
+</div>
