--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <div class="footer-nav">
                     <div id="footer">
                         <a href="@Url.Action("Impressum","Home")">Impressum</a> 
-                        <a href="@Url.Action("AGB","Home")">AGB's</a> 
+                        <a href="@Url.Action("AGB","Home")" style="margin-left:50px">AGB's</a> 
                     </div>                  
                 </div>
             </div>
