--- a/CardGame.Web/Content/bootstrap.css
+++ b/CardGame.Web/Content/bootstrap.css
@@ -4193,11 +4193,11 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-brand {
   float: left;
-  padding: 15px 15px;
+  padding: 7px 5px;
   height:30px;
   text-align:left;
-  margin-top:8px;
-  font-size: 30px;
+  margin-top:5px;
+  font-size: 42px;
   line-height: 20px;
   color:grey !important;
 }
@@ -4247,7 +4247,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-nav > li > a {
-  padding-top: 10px;
+  padding-top: 10px !important;
   padding-bottom: 10px;
   line-height: 20px;
 }
