--- a/CardGame.Web/Views/Account/Register.cshtml
+++ b/CardGame.Web/Views/Account/Register.cshtml
@@ -11,9 +11,10 @@
     <fieldset id="RegisterForm">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+        <div class="editorFields">
         <div>@Html.Label("Vorname")</div>
         <div>@Html.EditorFor(u => u.Firstname)</div>
-<p class="valimassage">@Html.ValidationMessageFor(model => model.Firstname, "", new { @class = "text-warning" })</p>
+<p class="valimassage">@Html.ValidationMessageFor(model => model.Firstname, "", new { @class = "text-warning" }) </div>
         <br />
         <div>@Html.Label("Nachname")</div>
         <div>@Html.EditorFor(u => u.Lastname)</div>
