im Shop a bissl wos

--- a/CardGame.Web/Views/Home/Shop.cshtml
+++ b/CardGame.Web/Views/Home/Shop.cshtml
@@ -1,10 +1,9 @@
-﻿
+﻿@model IEnumerable<CardGame.DAL.Model.tbldeck>
 @{
     ViewBag.Title = "Shop";
 }
-
-<p class="CardPacks">
-    <img src="~/Content/Images/Card Pack.png" />
-    <img src="~/Content/Images/Card Pack.png" />
-    <img src="~/Content/Images/Card Pack.png" />
-</p>
+<div>
+    <img class="deckPics" src="~/Content/Images/Card Pack.png" />
+    <img class="deckPics" src="~/Content/Images/Card Pack.png" />
+    <img class="deckPics" src="~/Content/Images/Card Pack.png" />
+</div>
