--- a/CardGame.Web/Views/Account/Login.cshtml
+++ b/CardGame.Web/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
         </div>
         <br/>
         <p>
-            <input type="submit" class="btn btn-submit" value="Login">
+            <input type="submit" class="btn btn-submit" value="Login" style="padding-top:1px">
         </p>
     </fieldset>
 }
