--- a/CardGame.Web/Views/Home/AGB.cshtml
+++ b/CardGame.Web/Views/Home/AGB.cshtml
@@ -4,11 +4,11 @@
 }
 
 <div class="AGBBackGround">
-    <h2 class="AGBHeader">Allgemeine Geschäftsbedingungen der MTP GmbH</h2>
-
+    <h2 class="AGBHeader">Allgemeine Geschäftsbedingungen der MTP GmbH</h2>    
     <div class="AGBBody">
         <div>
             <h4>1.1 Allgemeine Bestimmungen</h4>
+          
         </div>
         <p>Die allgemeinen Geschäftsbedingungen der MTP gelten für alle Lieferungen und Dienstleistungen, die MTP  gegenüber dem Auftraggeber erbringt. Sie gelten auch für zukünftige Geschäfte, selbst wenn nicht ausdrücklich darauf Bezug genommen wird. MTP nimmt Auftrage nur unter Anwendung dieser allgemeinen Geschäftsbedingungen an.</p>
         <div>
@@ -23,5 +23,20 @@
             <h4>1.4 Gewährleistung</h4>
         </div>
         <p>Der Kunde ist verpflichtet, nach Erhalt der vereinbarten Lieferungen und Leistungen diese sofort auf Richtigkeit und Vollständigkeit zu kontrollieren und bei gelieferten Programmen einen Probe- ¨lauf durchzufuhren sowie die erzielten Ergebnisse zu überprüfen. Soweit sich dabei irgendwelche Mängel herausstellen, ist der Auftraggeber verpflichtet, MTP sofort schriftlich hier über unter Anschluss der fehlerhaften Beispiele in Kenntnis zu setzen. MTP wird bemüht sein, den Mangel kurzfristig zu beheben und das korrigierte Programm dem Auftraggeber zur Verfügung zu stellen, oder eine zumutbare Methode zur Umgehung des Mangels zu beschreiben. MTP kann vom Auftraggeber weitere zur Behebung des Mangels notwendige Informationen anfordern, die er kostenlos zur Verfügung zu stellen hat. Eine vom Auftraggeber schriftlich zu setzende Nachfrist für die Fehlerbehebung oder Umgehung beträgt mindestens 60 Tage.</p>
+        <div>
+            <h4>1.5 Haftung</h4>
+        </div>
+            <p>
+                Auch bei sorgfältigster und umfangreichster Prüfung kann eine vollständige Fehlerfreiheit von Software-Programmen nach dem heutigen Stand der Technik nicht gewährleistet werden. Insofern übernimmt MTP keine Haftung für die vollständige Richtigkeit und Fehlerfreiheit der ¨vom Auftraggeber erworbenen Software-Programme. Die Haftung von MTP für sämtliche Ansprüche, aus welchem Rechtstitel immer, sind mit der Höhe des Auftragswertes und soweit dieser den Betrag von EUR 10.000,–  übersteigt mit EUR 10.000,– begrenzt. Vereinbarungsgemäß haftet MTP weder für entgangenen Gewinn noch für erwartete, aber ¨nicht eingetretene Ersparnisse, Schaden aus Ansprüchen Dritter gegen den Kunden, mittelbare Schäden und Folgeschäden sowie Schäden an aufgezeichneten Daten. Schadenersatzanspruche in Fällen leichter Fahrlässigkeit sind ausgeschlossen, ebenso eine Haftung für Schäden, die durch unberechtigte Eingriffe Dritter entstehen.
+            </p>
+        <div>
+            <h4>1.6 Rücktrittsrecht</h4>
+        </div>
+        <p>
+            Sollte sich im Zuge des Versuches der Erfüllung eines Auftrages herausstellen, dass diese tatsachlich oder juristisch unmöglich ist, ist MTP verpflichtet, dies dem Auftraggeber sofort anzuzeigen. Beide Vertragspartner sind in diesem Fall berechtigt, von dem Teil des Auftrages
+            zurückzutreten, dessen Ausführung sich als unmöglich erwiesen hat. Höhere Gewalt, Arbeitskonflikte, Naturkatastrophen sowie Transportsperren entbinden MTP von ihren Lieferverpflichtungen bzw. gestatten ihr eine analoge Verlängerung der vereinbarten Lieferfristen.
+            Stornierungen durch den Auftraggeber sind nur mit ausdrücklicher Zustimmung von MTP möglich. Ist MTP mit einem Storno einverstanden, so hat sie das Recht, neben den erbrachten Leistungen und aufgelaufenen Kosten eine Stornogebühr in angemessener Höhe zu verrechnen.           
+        </p>
+        <h5 style="color:#FEE9E4; text-align:left">Stand: @DateTime.Now.Year</h5>
     </div>
 </div>
