--- a/CardGame.Web/Views/Home/Impressum.cshtml
+++ b/CardGame.Web/Views/Home/Impressum.cshtml
@@ -4,26 +4,13 @@
 }
 
 
-
-<h2 class="ImpressumHeader">Impressum</h2>
-
-
-<div class="ImpressumBody">
-    <table>
-        <tr>
-            <td>Magical Tea Party</td>
-        </tr>
-        <tr>
-            <td>Magic Street 23, 4242 Wonderland</td>
-        </tr>
-        <tr>
-            <td>Tel: +43(1) 23 233 232</td>
-        </tr>
-        <tr>
-            <td>Email: magic@teaparty.com</td>
-        </tr>
-        <tr>
-            <td>CEO: Faul Thomas</td>
-        </tr>
-    </table>
+<div class="ImpressumBackGround">
+    <h2 class="ImpressumHeader">Impressum</h2>
+    <div class="ImpressumBody">
+        <p>Magical Tea Party</p>
+        <p>Simmeringer Hauptstraße 47-49, 1110 Wien</p>
+        <p>Tel: +43(1) 23 233 232</p>
+        <p>Email: office.mtp@gmx.at</p>
+        <p>Manuel Sandholzer</p>
+</div>
 </div>
