--- a/CardGame.Web/Views/Account/Register.cshtml
+++ b/CardGame.Web/Views/Account/Register.cshtml
@@ -37,7 +37,7 @@
         <p class="valimassage">@Html.ValidationMessageFor(model => model.confirmPassword, "", new { @class = "text-warning" })</p>
         <br />
         <p>
-            <input type="submit" class="btn btn-submit" value="Register">
+            <input type="submit" class="btn btn-submit" value="Registrieren" style="padding-top:1px">
         </p>
     </fieldset>
 }
